<resources>
    <string name="app_name">Task Unity</string>

    <!--Welcome, SignIn, SingUp Screen-->
    <string name="label_login">
        Login to your Account
    </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_with">-Or, Sign in with-</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_acc">Don\'t have an account? </string>
    <string name="already_have_acc">Already have account? </string>


    <string name="create_acc">Create your Account</string>
    <string name="com_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with">-Or, sign up with-</string>


    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Projemanag’s Minimalist Interface.</string>
    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="sign_in_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait…</string>


    <!-- Nav drawer -->
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>


    <!-- My profile activity -->
    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile_title">My Profile</string>

    <!--Board Activity-->
    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>
    <string name="add_task">Add Task</string>

    <string name="no_boards_are_available">No Boards are Available !!!</string>

    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>

    <!-- Members activity -->
    <string name="members">Members</string>
    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="search_member">Add Member</string>

    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="delete_card">Delete Card</string>

    <string name="str_select_label_color">Select Label Color</string>

    <string name="str_select_member">Select Member</string>

    <string name="default_notification_channel_id">projemanag_notification_channel_id</string>
    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete this card? \'%1$s\'</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>