<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_centerHorizontal="true"
        android:id="@+id/txtLogo"
        android:textColor="@color/main_color"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_marginTop="64dp"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtLogInTo"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@id/txtLogo"
        android:text="@string/create_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/eTxtEmail"
        android:background="@drawable/round_edittext"
        android:hint="@string/email"
        android:elevation="20dp"
        android:paddingStart="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_below="@id/txtLogInTo"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <EditText
        android:id="@+id/eTxtName"
        android:background="@drawable/round_edittext"
        android:hint="@string/name"
        android:elevation="20dp"
        android:paddingStart="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_below="@id/eTxtEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    

    <EditText
        android:id="@+id/eTxtPass"
        android:background="@drawable/round_edittext"
        android:hint="@string/password"
        android:elevation="20dp"
        android:paddingStart="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:inputType="textPassword"
        android:layout_below="@id/eTxtName"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>


    <Button
        android:id="@+id/btbSignUp"
        android:textColor="@color/white"
        android:elevation="20dp"
        android:textStyle="bold"
        android:text="@string/sign_up"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_below="@id/eTxtPass"
        android:background="@drawable/round_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/already_have_acc"
        android:layout_below="@id/btbSignUp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/already_have_acc" />

        <TextView
            android:id="@+id/txtSignInLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>



</RelativeLayout>